# portfolio-project

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pnpm-lock.yaml  replit.md  tsconfig.json
artifacts/api-server/: alembic.ini  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  tsconfig.json  vitest.config.ts
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/alembic/: env.py
artifacts/api-server/alembic/versions/: 0001_initial_schema.py  0002_add_guest_role.py
artifacts/api-server/src/: config.py  database.py  main.py
artifacts/api-server/src/__tests__/: bdd.test.ts  ddt.test.ts  e2e.test.ts  regression.test.ts  unit.test.ts
artifacts/api-server/src/agent/: csv_utils.py  data_sources.py  process.py  scrape.py  train.py
artifacts/api-server/src/lib/: encryption.ts
artifacts/api-server/src/middleware/: auth.py
artifacts/api-server/src/middlewares/: rbac.ts
artifacts/api-server/src/models/: __init__.py  data_source.py  feature_set.py  profile.py  scrape_job.py  test_run.py  training_run.py  user.py
artifacts/api-server/src/routers/: agent.py  health.py  knowledge_graph.py  profile.py  storage.py  tests.py  users.py
artifacts/api-server/src/routes/: agent.ts  index.ts  knowledgeGraph.ts  profile.ts  tests.ts  users.ts
artifacts/api-server/src/schemas/: agent.py  common.py  knowledge_graph.py  profile.py  tests.py  user.py
artifacts/api-server/src/services/: agent_service.py  base.py  graph_service.py  profile_service.py  test_service.py  user_service.py
artifacts/api-server/tests/: conftest.py
artifacts/api-server/tests/bdd/: __init__.py  test_bdd.py
docker/: docker-compose.yml  (+1 more)
(+65 files in other folders)
